# claude-code-data-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: evidence-boundaries.md  schema-versioning.md  support-matrix.md
docs/maintenance/: private-to-public.md
src/claude_code_data_kit/: __init__.py  _lab_cli.py  dedupe.py  lab.py  records.py  routing.py  versioning.py
src/claude_code_data_kit/_fixtures/: hook_agent_posttooluse.json  otel_api_request.json  statusline_main.json  statusline_subagents.json  transcript_2_1_214.jsonl
src/claude_code_data_kit/collectors/: __init__.py  _common.py  hooks.py  otel.py  statusline.py  transcript.py
tests/: distribution_audit.py  test_bootstrap.py  test_collectors.py  test_dedupe_routing.py  test_distribution_audit.py  test_fixture_hygiene.py  test_goldens.py  test_hygiene_rules.py  test_public_api.py  test_records.py  test_versioning_lab.py
